--- a/calc-imc-js/assets/css/style.css
+++ b/calc-imc-js/assets/css/style.css
@@ -4,11 +4,44 @@
   --background-color: rgb(33, 134, 156);
   --primary-color: rgb(100, 193, 214);
   --primary-color-darker: rgb(9, 48, 56);
+  --result-color-green: rgb(122, 255, 122);
+  --result-color-red: rgb(255, 122, 122);
 }
 
 * {
   box-sizing: border-box;
   outline: 0;
+}
+
+h2 {
+  font-size: 1em;
+}
+
+p {
+  font-size: 0.9em;
+  margin: 0.4em auto;
+}
+
+.tab {
+  display: flex;
+}
+
+.tab {
+  display: flex;
+}
+
+.resultado {
+  background-color: var(--result-color-green);
+  margin: 1em auto;
+  padding: 0em 0.3em;
+  border-radius:8px;
+}
+
+.resultadoRed {
+  background-color: var(--result-color-red);
+  margin: 1em auto;
+  padding: 0em 0.3em;
+  border-radius:8px;
 }
 
 body {
@@ -21,7 +54,7 @@ body {
 }
 
 .container {
-  max-width: 50%;
+  max-width: 80%;
   margin: 50px auto;
   background: #fff;
   padding: 25px;
